Fix chunk id counter

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "1c624d1d",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "add94f42",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "ace775d2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "b51982f9",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "8f19d3e1",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "259439b1",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "4ea89642",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "9d45b5ec",
    "metadata": {},
    "outputs": [],
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "985a8e26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be92312e6e2949a3bde64a637591a976",
+       "model_id": "510590daf13843c7960b3f9e6f3ebbed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "ed79247d",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "4         5  AWS Toolkit for Microsoft Azure DevOps\\nUser G...        5605"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "57f89edc",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "683f6d7d",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "f24b87f2",
    "metadata": {},
    "outputs": [
@@ -461,14 +461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "1dec383d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9002c2bf12d341bcb7d75403e48fd20f",
+       "model_id": "acb4c503db7a4db084cbd711ad518ca9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "5b523a09",
    "metadata": {},
    "outputs": [
@@ -556,24 +556,6 @@
        "      <td>0</td>\n",
        "      <td>983</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>.................................................</td>\n",
-       "      <td>3</td>\n",
-       "      <td>993</td>\n",
-       "      <td>783</td>\n",
-       "      <td>1776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>ction ...........................................</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1576</td>\n",
-       "      <td>2576</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -583,24 +565,20 @@
        "0         0  User Guide AWS Toolkit for Microsoft Azure Dev...         1   \n",
        "1         1  AWS Toolkit for Microsoft Azure DevOps User Gu...         2   \n",
        "2         2  AWS Toolkit for Microsoft Azure DevOps User Gu...         3   \n",
-       "3         2  .................................................         3   \n",
-       "4         2  ction ...........................................         3   \n",
        "\n",
        "   char_count  start_char  end_char  \n",
        "0         134           0       134  \n",
        "1         582           0       582  \n",
-       "2         983           0       983  \n",
-       "3         993         783      1776  \n",
-       "4        1000        1576      2576  "
+       "2         983           0       983  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chunks.head()"
+    "chunks.head(3)"
    ]
   },
   {
@@ -613,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "id": "2991a6ee",
    "metadata": {},
    "outputs": [
@@ -654,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "id": "ac8d74cc",
    "metadata": {},
    "outputs": [],
