Add semantic search and chromadb

--- a/notebooks/02_manual_RAG.ipynb
+++ b/notebooks/02_manual_RAG.ipynb
@@ -55,6 +55,8 @@
     "from pathlib import Path\n",
     "from tqdm.auto import tqdm\n",
     "from typing import List, Tuple, Dict, Any, Optional\n",
+    "import chromadb\n",
+    "from chromadb.config import Settings\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)\n",
     "sns.set_style('whitegrid')\n",
@@ -179,9 +181,27 @@
     }
    ],
    "source": [
-    "df = pd.read_json('../data/processed/chunks.json', orient='records')\n",
+    "chunks = pd.read_json('../data/processed/chunks.json', orient='records')\n",
     "\n",
-    "df.head(3)"
+    "chunks.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fe1cad3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of chunks: 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of chunks:', chunks.shape[0])"
    ]
   },
   {
@@ -189,48 +209,40 @@
    "id": "c570cbf7",
    "metadata": {},
    "source": [
-    "# Embeddings Creation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "d84d687b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading embedding model...\n",
-      "✅ Model loaded: 384 dimensions\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Load embedding model\n",
-    "print(\"Loading embedding model...\")\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
-    "print(f\"✅ Model loaded: {model.get_sentence_embedding_dimension()} dimensions\")"
+    "# Embeddings Creation\n",
+    "### Model Selection\n",
+    "For this project `all-MiniLM-L6-v2` model is chosen, due to high performance and relatively small weight. \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "d84d687b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SentenceTransformer('all-MiniLM-L6-v2')  # all-mpnet-base-v2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8b76f88",
+   "metadata": {},
+   "source": [
+    "### Text Encoding\n",
+    "Convert each chunk into an embedding vector "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "89e710c8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating embeddings for 300 chunks...\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c2775808e7d4d118824304e0386c1fa",
+       "model_id": "c5dfe071aa834508b063d206b5b7e9c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,53 +257,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Created embeddings with shape: (300, 384)\n"
+      "Dimension of each embedding: 384\n"
      ]
     }
    ],
    "source": [
-    "# Create embeddings for all chunks\n",
-    "print(f\"Creating embeddings for {len(df)} chunks...\")\n",
-    "\n",
     "embeddings = model.encode(\n",
-    "    df['text'].tolist(),\n",
-    "    show_progress_bar=True,\n",
-    "    batch_size=32\n",
+    "    sentences = chunks['text'].tolist(),\n",
+    "    show_progress_bar = True,\n",
     ")\n",
     "\n",
-    "print(f\"✅ Created embeddings with shape: {embeddings.shape}\")\n",
-    "# Expected output: (number_of_chunks, 384)"
+    "print('Dimension of each embedding:', embeddings.shape[1])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "9da28519",
+   "cell_type": "markdown",
+   "id": "e61cbea3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample embedding (first 10 dimensions):\n",
-      "[-0.01388389  0.03978214 -0.03466231  0.01785599  0.07080441 -0.0241555\n",
-      " -0.02924745 -0.09164825  0.0424548   0.14665551]\n",
-      "\n",
-      "Embedding statistics:\n",
-      "Min value: -0.203\n",
-      "Max value: 0.218\n",
-      "Mean value: -0.001\n"
-     ]
-    }
-   ],
    "source": [
-    "# Let's inspect one embedding\n",
-    "print(\"Sample embedding (first 10 dimensions):\")\n",
-    "print(embeddings[0][:10])\n",
-    "print(f\"\\nEmbedding statistics:\")\n",
-    "print(f\"Min value: {embeddings.min():.3f}\")\n",
-    "print(f\"Max value: {embeddings.max():.3f}\")\n",
-    "print(f\"Mean value: {embeddings.mean():.3f}\")"
+    "### Save Embeddings\n",
+    "Add embeddings to dataframe with chunks"
    ]
   },
   {
@@ -300,13 +285,6 @@
    "id": "626f6f15",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataFrame shape: (300, 7)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -395,11 +373,285 @@
     }
    ],
    "source": [
-    "# Add embeddings to dataframe (optional, for inspection)\n",
-    "df['embedding'] = list(embeddings)\n",
+    "chunks['embedding'] = list(embeddings)\n",
     "\n",
-    "print(f\"DataFrame shape: {df.shape}\")\n",
-    "df.head(3)"
+    "chunks.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51eece7a",
+   "metadata": {},
+   "source": [
+    "# Vector Database Setup\n",
+    "Create a database to store embeddings and speed up similarity search. \n",
+    "### Initialize Client\n",
+    "In this project ChromaDB client is used, because it is free and does not require external server. Use `PersistentClient` to store embeddings on a disk (not in RAM). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "17ebd543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = chromadb.PersistentClient(\n",
+    "    path='../data/chromadb',\n",
+    "    settings=Settings(\n",
+    "        anonymized_telemetry=False,\n",
+    "        allow_reset=True,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0681687",
+   "metadata": {},
+   "source": [
+    "### Create Collection\n",
+    "Create collection called `aws_docs` inside database and also delete the old one if exists. Cosine similarity is used as metric. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d384ac1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    client.delete_collection(name='aws_docs')\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "collection = client.create_collection(\n",
+    "    name = 'aws_docs',\n",
+    "    configuration = {'hnsw': {'space': 'cosine'}},\n",
+    "    metadata = {'description': 'AWS VSTS documentation chunks'},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94e7583",
+   "metadata": {},
+   "source": [
+    "### Fill Collection\n",
+    "\n",
+    "First, unpack ids, embeddings, text chunks and chunks metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c5b8b888",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = list(map(str, chunks['chunk_id'].tolist()))\n",
+    "embeddings_list = chunks['embedding'].tolist()\n",
+    "documents = chunks['text'].tolist()\n",
+    "metadatas = chunks[['page_num', 'char_count', 'start_char', 'end_char']].to_dict('records')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00577f7d",
+   "metadata": {},
+   "source": [
+    "Add to collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "749ca286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection.add(\n",
+    "    ids=ids,\n",
+    "    embeddings=embeddings_list,\n",
+    "    documents=documents,\n",
+    "    metadatas=metadatas,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86a5a89d",
+   "metadata": {},
+   "source": [
+    "### Verify Storage\n",
+    "\n",
+    "Print random document from the database to verify that everything is stored correctly "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c991491f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 99\n",
+      "Page: 42\n",
+      "Char quantity: 1000\n",
+      "Embedding shape: 384\n",
+      "Text preview: entials to be available from EC2 instance metadata the instance must have been started with an instance proﬁle referencing a role granting permissions to the task to make calls to AWS on your behalf. \n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = collection.get(\n",
+    "    ids=['99'],\n",
+    "    include=['documents', 'metadatas', 'embeddings']\n",
+    ")\n",
+    "\n",
+    "print('ID:', *sample['ids'])\n",
+    "print('Page:', sample['metadatas'][0]['page_num'])\n",
+    "print('Char quantity:', sample['metadatas'][0]['char_count'])\n",
+    "print('Embedding shape:', sample['embeddings'][0].shape[0])\n",
+    "print('Text preview:', sample['documents'][0][:200])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "694eb199",
+   "metadata": {},
+   "source": [
+    "Everything is stored fine!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e5861fb",
+   "metadata": {},
+   "source": [
+    "# Semantic Search\n",
+    "\n",
+    "Semantic search is a process of finding the closest chunk in terms of meaning to a query where distance is usually measured by cosine similarity.\n",
+    "\n",
+    "### Formulate a Search Query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aa06a9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = 'If I do not have an AWS account, what do I do?'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7128461d",
+   "metadata": {},
+   "source": [
+    "### Perform Semantic Search\n",
+    "Use custom function that returns 3 best chunks by default "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "90a49e3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = semantic_search(\n",
+    "    query,\n",
+    "    n_results=3,\n",
+    "    model=model,\n",
+    "    collection=collection,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57bfea38",
+   "metadata": {},
+   "source": [
+    "### Print Results\n",
+    "Use custom function for pretty print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "512420e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: If I do not have an AWS account, what do I do?\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Rank 1 | Similarity: 0.696 | Page: 10 | Chunk ID: 39 | Text preview below (first 300 chars):\n",
+      "al.aws.amazon.com/billing/signup. 2. Follow the online instructions. Part of the sign-up procedure involves receiving a phone call or text message and entering a veriﬁcation code on the phone keypad. When you sign up for an AWS account, an AWS account root user is created. The root user has access t...\n",
+      "\n",
+      "Rank 2 | Similarity: 0.650 | Page: 109 | Chunk ID: 275 | Text preview below (first 300 chars):\n",
+      "ministrator – If you're in charge of AWS resources at your company, you probably have full access to AWS. It's your job to determine which AWS features and resources your service users should access. You must then submit requests to your IAM administrator to change the permissions of your service us...\n",
+      "\n",
+      "Rank 3 | Similarity: 0.596 | Page: 109 | Chunk ID: 276 | Text preview below (first 300 chars):\n",
+      "thenticating with identities Authentication is how you sign in to AWS using your identity credentials. You must be authenticated as the AWS account root user, an IAM user, or by assuming an IAM role. You can sign in as a federated identity using credentials from an identity source like AWS IAM Ident...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_search_results(results=results, query=query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdff11c3",
+   "metadata": {},
+   "source": [
+    "### Test It One More Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "762b9b32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: What if I want to allow people outside of my AWS account to access my AWS resources?\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Rank 1 | Similarity: 0.700 | Page: 114 | Chunk ID: 290 | Text preview below (first 300 chars):\n",
+      "r organization can use to access your resources. You can specify who is trusted to assume the role. For services that support resource-based policies or access control lists (ACLs), you can use those policies to grant people access to your resources. To learn more, consult the following: • To learn ...\n",
+      "\n",
+      "Rank 2 | Similarity: 0.692 | Page: 109 | Chunk ID: 275 | Text preview below (first 300 chars):\n",
+      "ministrator – If you're in charge of AWS resources at your company, you probably have full access to AWS. It's your job to determine which AWS features and resources your service users should access. You must then submit requests to your IAM administrator to change the permissions of your service us...\n",
+      "\n",
+      "Rank 3 | Similarity: 0.589 | Page: 96 | Chunk ID: 242 | Text preview below (first 300 chars):\n",
+      "erencing a role granting permissions to the task to make calls to AWS on your behalf. For more information, see Using an IAM role to grant permissions to applications running on Amazon EC2 instances. Synopsis 90...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = 'What if I want to allow people outside of my AWS account to access my AWS resources?'\n",
+    "results = semantic_search(\n",
+    "    query,\n",
+    "    n_results=3,\n",
+    "    model=model,\n",
+    "    collection=collection,\n",
+    ")\n",
+    "print_search_results(results=results, query=query)"
    ]
   }
  ],
