--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -46,15 +46,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
-    "import pymupdf, json, requests, re, sys\n",
-    "from sentence_transformers import SentenceTransformer\n",
+    "import sys\n",
     "from pathlib import Path\n",
-    "from tqdm.auto import tqdm\n",
-    "from typing import List, Tuple, Dict, Any, Optional\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)\n",
     "sns.set_style('whitegrid')\n",
@@ -82,7 +78,7 @@
    "outputs": [],
    "source": [
     "sys.path.append('..')\n",
-    "from src.data_utils import *"
+    "from src.data_utils import download_file, load_and_analyze_pdf, create_chunks"
    ]
   },
   {
@@ -193,7 +189,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05f881e0b50943b6b41dee8fef6ed354",
+       "model_id": "8bc3820bf8c74e19bb191acb884572b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73ffd7fecb194ed79f8ca3265338ba55",
+       "model_id": "fc44cb3c267e4c10a06b86ce8aaf9169",
        "version_major": 2,
        "version_minor": 0
       },
