--- a/notebooks/02_manual_RAG.ipynb
+++ b/notebooks/02_manual_RAG.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "0a933101",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,35 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "41ab3230",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pymupdf, json, requests, re, sys\n",
+    "import sys, os\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "from pathlib import Path\n",
-    "from tqdm.auto import tqdm\n",
-    "from typing import List, Tuple, Dict, Any, Optional\n",
-    "import chromadb\n",
+    "from chromadb import PersistentClient\n",
     "from chromadb.config import Settings\n",
-    "import anthropic\n",
+    "from chromadb.api.models.Collection import Collection\n",
+    "from typing import Any, Dict\n",
     "from anthropic import Anthropic\n",
-    "import os\n",
     "from dotenv import load_dotenv\n",
     "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "sns.set_style('whitegrid')\n",
-    "%matplotlib inline"
+    "pd.set_option('display.max_rows', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "94934ce3",
    "metadata": {},
    "outputs": [],
@@ -82,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "df1e7c83",
    "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.append('..')\n",
-    "from src.data_utils import *"
+    "from src.manual_RAG import semantic_search, print_search_results, create_prompt"
    ]
   },
   {
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "17067259",
    "metadata": {},
    "outputs": [
@@ -179,7 +171,7 @@
        "2         260         322       822  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "fe1cad3c",
    "metadata": {},
    "outputs": [
@@ -220,12 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "d84d687b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_model = SentenceTransformer('all-MiniLM-L6-v2')  # all-mpnet-base-v2"
+    "embedding_model = SentenceTransformer('all-MiniLM-L6-v2')"
    ]
   },
   {
@@ -239,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "89e710c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ef7cdfc762545b4848c376b6531c154",
+       "model_id": "b04d2b6babf94be5b6c5ef1c324db90e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "626f6f15",
    "metadata": {},
    "outputs": [
@@ -371,7 +363,7 @@
        "2  [-0.008677264, -0.07277807, 0.006473142, -0.08...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,12 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "17ebd543",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = chromadb.PersistentClient(\n",
+    "client = PersistentClient(\n",
     "    path='../data/chromadb',\n",
     "    settings=Settings(\n",
     "        anonymized_telemetry=False,\n",
@@ -420,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "d384ac1d",
    "metadata": {},
    "outputs": [],
@@ -449,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "c5b8b888",
    "metadata": {},
    "outputs": [],
@@ -470,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "749ca286",
    "metadata": {},
    "outputs": [],
@@ -495,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "c991491f",
    "metadata": {},
    "outputs": [
@@ -546,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "aa06a9e6",
    "metadata": {},
    "outputs": [],
@@ -565,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "90a49e3e",
    "metadata": {},
    "outputs": [],
@@ -589,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "512420e7",
    "metadata": {},
    "outputs": [
@@ -625,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "762b9b32",
    "metadata": {},
    "outputs": [
@@ -682,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "ca446a22",
    "metadata": {},
    "outputs": [],
@@ -720,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "3f804e53",
    "metadata": {},
    "outputs": [],
@@ -741,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "5dfba2df",
    "metadata": {},
    "outputs": [],
@@ -763,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "3cdaa339",
    "metadata": {},
    "outputs": [],
@@ -786,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "a48bc30f",
    "metadata": {},
    "outputs": [
@@ -794,21 +786,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ANSWER:\n",
+      "\n",
       "According to the AWS documentation, if you want to allow people outside of your AWS account to access your AWS resources, you have several options:\n",
       "\n",
-      "1. Create a role that users in other accounts or people outside your organization can use to access your resources. You can specify who is trusted to assume the role.\n",
+      "1. Create a role that users in other accounts or people outside your organization can use to access your resources. You can specify who is trusted to assume the role. (Page 114)\n",
       "\n",
-      "2. For services that support resource-based policies or access control lists (ACLs), you can use those policies to grant people access to your resources.\n",
+      "2. For services that support resource-based policies or access control lists (ACLs), you can use those policies to grant people access to your resources. (Page 114)\n",
       "\n",
-      "The documentation references three specific guides for different scenarios:\n",
-      "\n",
-      "- To provide access to your resources across AWS accounts that you own, see Providing access to an IAM user in another AWS account that you own in the IAM User Guide.\n",
-      "\n",
-      "- To provide access to your resources to third-party AWS accounts, see Providing access to AWS accounts owned by third parties in the IAM User Guide.\n",
-      "\n",
-      "- To provide access through identity federation, see Providing access to externally authenticated users (identity federation) in the IAM User Guide.\n",
-      "\n",
-      "(Page 114)\n"
+      "3. The documentation references three specific guides for different scenarios:\n",
+      "   - For providing access to your resources across AWS accounts that you own, see Providing access to an IAM user in another AWS account that you own in the IAM User Guide (Page 114)\n",
+      "   - For providing access to your resources to third-party AWS accounts, see Providing access to AWS accounts owned by third parties in the IAM User Guide (Page 114)\n",
+      "   - For providing access through identity federation, see Providing access to externally authenticated users (identity federation) in the IAM User Guide (Page 114)\n"
      ]
     }
    ],
@@ -835,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "a433b98c",
    "metadata": {},
    "outputs": [],
@@ -893,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "8d190abc",
    "metadata": {},
    "outputs": [
@@ -911,7 +900,7 @@
       "2. Follow the online instructions\n",
       "3. Complete the sign-up procedure, which involves receiving a phone call or text message and entering a verification code on the phone keypad\n",
       "\n",
-      "When you complete the sign-up process, an AWS account root user will be created, which will have access to all AWS services and resources in the account.\n"
+      "When you complete this sign-up process, an AWS account root user will be created for you, which will have access to all AWS services and resources in the account.\n"
      ]
     }
    ],
@@ -955,9 +944,9 @@
       "How do I make a tasty pizza?\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Answer:\n",
-      "The provided documentation chunks do not contain any information about making pizza. These chunks appear to be from AWS documentation table of contents or reference materials, containing only structural elements like \"Synopsis,\" \"Description,\" and \"Parameters\" sections.\n",
+      "The provided documentation chunks do not contain any information about making pizza. These chunks appear to be table of contents or index pages from AWS documentation covering topics like stacks, synopsis, descriptions, and parameters.\n",
       "\n",
-      "I cannot answer your question based on the provided context, as it is not related to Amazon Web Services documentation.\n"
+      "This question cannot be answered using the provided context, as it is outside the scope of AWS documentation.\n"
      ]
     }
    ],
