--- a/notebooks/03_LangChain_RAG.ipynb
+++ b/notebooks/03_LangChain_RAG.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "f1d1d5c0",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "755a9ed6",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,7 @@
     "from pathlib import Path\n",
     "from tqdm.auto import tqdm\n",
     "import langchain\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "from typing import List, Tuple, Dict, Any, Optional\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "dee342e5",
    "metadata": {},
    "outputs": [],
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "e44d47bc",
    "metadata": {},
    "outputs": [],
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d6f98862",
    "metadata": {},
    "outputs": [
@@ -174,8 +175,9 @@
        "2         260         322       822  "
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -186,10 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2295b153",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of chunks: 569\n"
+     ]
+    }
+   ],
    "source": [
     "print('Number of chunks:', chunks.shape[0])"
    ]
@@ -199,7 +209,133 @@
    "id": "eeade647",
    "metadata": {},
    "source": [
-    "# ца"
+    "# Embeddings Creation\n",
+    "Embeddings creation is different with LangChain. We need special wrapper that will be used by LangChain when it is needed (no need to explicitly manually create an embedding for each chunk). Here the same sentence transformer `all-MiniLM-L6-v2` model is used that comes within HuggingFace LangChain package. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14d312e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ LangChain embedding function created\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedding_function = HuggingFaceEmbeddings(\n",
+    "    model_name='sentence-transformers/all-MiniLM-L6-v2',\n",
+    "    model_kwargs={'device': 'cpu'},\n",
+    "    encode_kwargs={'normalize_embeddings': True}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "501b4962",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Embedding dimension: 384\n",
+      "📊 First 5 values: [-0.04203960299491882, 0.04495583474636078, 0.016322309151291847, -0.03731227666139603, 0.03714952990412712]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test with a sample text\n",
+    "test_text = \"AWS provides cloud computing services\"\n",
+    "test_embedding = embedding_function.embed_query(test_text)\n",
+    "\n",
+    "print(f'📊 Embedding dimension: {len(test_embedding)}')\n",
+    "print(f'📊 First 5 values: {test_embedding[:5]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e72be39",
+   "metadata": {},
+   "source": [
+    "### Create Embeddings for All Chunks (Optional Visualization)\n",
+    "\n",
+    "**Note:** We won't actually create and store embeddings manually here. LangChain will do it automatically in the next section when we create the vector store.\n",
+    "\n",
+    "But let's verify our embedding function works on all chunks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6153d0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing embedding function on 3 sample chunks...\n",
+      "\n",
+      "Chunk 1: 134 chars → 384-dim embedding ✓\n",
+      "Chunk 2: 421 chars → 384-dim embedding ✓\n",
+      "Chunk 3: 260 chars → 384-dim embedding ✓\n",
+      "\n",
+      "✅ Embedding function works correctly!\n",
+      "📦 Ready to embed all 569 chunks automatically in next section\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test on first 3 chunks to verify\n",
+    "sample_texts = chunks['text'].head(3).tolist()\n",
+    "\n",
+    "print('Testing embedding function on 3 sample chunks...\\n')\n",
+    "for i, text in enumerate(sample_texts, 1):\n",
+    "    embedding = embedding_function.embed_query(text)\n",
+    "    print(f'Chunk {i}: {len(text)} chars → {len(embedding)}-dim embedding ✓')\n",
+    "\n",
+    "print(f'\\n✅ Embedding function works correctly!')\n",
+    "print(f'📦 Ready to embed all {len(chunks)} chunks automatically in next section')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25d1a83c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Key Difference from Notebook 2\n",
+    "\n",
+    "**Notebook 2:**\n",
+    "```python\n",
+    "# We did this:\n",
+    "embeddings = model.encode(chunks['text'].tolist())  # Created all embeddings\n",
+    "chunks['embedding'] = list(embeddings)  # Stored them\n",
+    "```\n",
+    "\n",
+    "**Notebook 3:**\n",
+    "```python\n",
+    "# We just create the function:\n",
+    "embedding_function = HuggingFaceEmbeddings(...)\n",
+    "\n",
+    "# LangChain will call embedding_function.embed_query(text) \n",
+    "# automatically for each chunk when we create the vector store!\n",
+    "```\n",
+    "\n",
+    "**Why this way?** \n",
+    "- Less code to write\n",
+    "- LangChain handles batching and optimization\n",
+    "- Easier to swap embedding models later\n",
+    "\n",
+    "**Next:** We'll create the vector store, and LangChain will automatically embed all chunks!"
    ]
   }
  ],
